Fixed unreadable links

--- a/style.css
+++ b/style.css
@@ -4,3 +4,6 @@
     color: white;
     font-family: 'Trebuchet MS', sans-serif, 'Arial';
 }
+a {
+    background-color: white
+}
